# autocommit

./: .gitignore  Cargo.toml
codex-prompts/: Cargo.toml
codex-prompts/src/: action.rs  approve.rs  lib.rs  main.rs  questions.rs  retry.rs  scroll_state.rs  select.rs  selection_rendering.rs
scripts/: release.sh
src/: api.rs  conventions.rs  git.rs  main.rs  parser.rs
