[package]
name = "autocommit"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP client for OpenAI-compatible API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UX
indicatif = "0.17"
colored = "2"
crossterm = "0.29"
ratatui = "0.30"

# Interactive prompts
codex-prompts = { path = "codex-prompts" }

# Error handling
anyhow = "1"

# Regex for hunk parsing
regex = "1"
